--- a/easy-cms/src/main/webapp/themes/theme-1/index.html
+++ b/easy-cms/src/main/webapp/themes/theme-1/index.html
@@ -1,4 +1,4 @@
-<%include("/common/head.html"){}%>
+<%include("./common/head.html"){}%>
 
 <div class="banner">
     <div class="slick-hero-slider-wrapper">
@@ -360,7 +360,7 @@
 </div>
 
 
-<%include("/common/footer.html"){}%>
+<%include("./common/footer.html"){}%>
 <script src="${themeUrl}/assets/js/banner.js"></script>
 <script src="${themeUrl}/assets/js/digital.js"></script>
 <script src="${themeUrl}/assets/js/wow.js"></script>
